fix alignment

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -70,7 +70,7 @@ body {
   padding-bottom: 15px;
 } .col-small {
   width: 275px;
-  text-align: right;
+  text-align: left;
   padding-right: 30px;
   color: #757578;
 }
